@@ -15,6 +15,7 @@ Changes in 1.1:
 - Dump QCA2 in favor of libgcrypt
 - Use smart pointers for mse::StreamSocket (246693)
 - Make sure that data checking fails if files cannot be opened when the maximum file limit is reached
+- Add methods to get the current upload and download rate limit
 
 Changes in 1.0.4:
 - Fix race condition causing timers not to be removed in the µTP code, resulting in a crash (251117)
